--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fantasy Football Manager</title>
+    <!-- bootstrap link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- css link  -->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1 class="text-center text-white">Fantasy Football Manager</h1>
+        <p class="text-white text-center fw-semibold mt-5">Welcome to Fantasy Football Manager, where you can create
+            your football team with players all around the globe. <br>You get to manage their expenses, coaches and
+            schedules. <br>Enjoy the journey.</p>
+        <div class=" row d-flex justify-content-center align-content-center">
+            <a href="#" class="btn btn-danger col-3 my-4">Get Started</a>
+        </div>
+    </header>
+    <!-- header done  -->
+
 </body>
+
 </html>
