cards half done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,121 @@
         </div>
     </header>
     <!-- header done  -->
-
+    <!-- player section  -->
+    <section class="container">
+        <div class="players">
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/di-maria-1.jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Angel Di Maria</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">39 Goals ● 11 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/download (1).jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Kylian Mbappe</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">19 Goals ● 12 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/download (2).jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Ricardo Kaká</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">69 Goals ● 41 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/download (3).jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Sergio Aguero</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">79 Goals ● 71 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/download.jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Neymar Jr.</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">99 Goals ● 90 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/gettyimages-1278439707-612x612.jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Robert Lewandowski</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">109 Goals ● 111 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/Lionel_Messi_20180626.jpg" class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Lionel Messi</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">139 Goals ● 111 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/porto-portuglal-june-portugal-s-cristiano-ronaldo-team-mates-celebrate-winning-uefa-nations-league-final-wit-trophy-151963447.jpg"
+                        class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Christiano Ronaldo</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">138 Goals ● 111 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+            <div class="player">
+                <div class="player-img">
+                    <img src="images/players/torino-italy-may-zlatan-ibrahimovic-ac-milan-serie-match-juventus-fc-ac-milan-zlatan-ibrahimovic-220488073.jpg"
+                        class="img-fluid">
+                </div>
+                <div class="player-name">
+                    <h4 class="text-center mt-3">Zaltan Ibrahimovic</h4>
+                </div>
+                <div class="player-info">
+                    <h6 class="text-center mt-1">150 Goals ● 100 Assists</h6>
+                </div>
+                <button class="w-75 d-block mx-auto">SELECT</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
