--- a/index.html
+++ b/index.html
@@ -20,122 +20,168 @@
             your football team with players all around the globe. <br>You get to manage their expenses, coaches and
             schedules. <br>Enjoy the journey.</p>
         <div class=" row d-flex justify-content-center align-content-center">
-            <a href="#" class="btn btn-danger col-3 my-4">Get Started</a>
+            <a href="#" class="btn btn-danger col-3 my-4 fw-normal">Get Started</a>
         </div>
     </header>
     <!-- header done  -->
     <!-- player section  -->
     <section class="container">
-        <div class="players">
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/di-maria-1.jpg" class="img-fluid">
+        <div class="row">
+            <div class="col-8">
+                <div class="players">
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/di-maria-1.jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Angel Di Maria</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">39 Goals ● 11 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/download (1).jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Kylian Mbappe</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">19 Goals ● 12 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/download (2).jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Ricardo Kaká</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">69 Goals ● 41 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/download (3).jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Sergio Aguero</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">79 Goals ● 71 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/download.jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Neymar Jr.</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">99 Goals ● 90 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/gettyimages-1278439707-612x612.jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Robert Lewandowski</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">109 Goals ● 111 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/Lionel_Messi_20180626.jpg" class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Lionel Messi</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">139 Goals ● 111 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/porto-portuglal-june-portugal-s-cristiano-ronaldo-team-mates-celebrate-winning-uefa-nations-league-final-wit-trophy-151963447.jpg"
+                                class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Christiano Ronaldo</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">138 Goals ● 111 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
+                    <div class="player">
+                        <div class="player-img">
+                            <img src="images/players/torino-italy-may-zlatan-ibrahimovic-ac-milan-serie-match-juventus-fc-ac-milan-zlatan-ibrahimovic-220488073.jpg"
+                                class="img-fluid">
+                        </div>
+                        <div class="player-name">
+                            <h4 class="text-center mt-3 fw-semibold">Zaltan Ibrahimovic</h4>
+                        </div>
+                        <div class="player-info">
+                            <h6 class="text-center mt-1">150 Goals ● 100 Assists</h6>
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
+                    </div>
                 </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Angel Di Maria</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">39 Goals ● 11 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
             </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/download (1).jpg" class="img-fluid">
+            <div class="col-4">
+                <div class="calculation">
+                    <div class="selected">
+                        <h3>Selected</h3>
+                        <div>
+                            <ol>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                                <li>5</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="budget">
+                        <h5 class="d-inline">Per Player</h5> <input type="text">
+                        <button class="d-block d-block bg-primary text-white  fw-semibold py-2 fs-5">Submit</button>
+                        <h5 class="d-inline">Player Expense</h5>
+                        <h5 class="d-inline"><span>0000</span> $</h5>
+                        <div class="d-flex">
+                            <h5 class=>Manager</h5> <input type="text">
+                        </div>
+                        <div class="d-flex">
+                            <h5 class=>Coach</h5><input type="text">
+                        </div>
+                        <button class="d-block d-block bg-primary text-white  fw-semibold py-2 fs-5">Submit</button>
+                        <div class="d-flex">
+                            <h5>Total</h5>
+                            <h5><span>0000</span>$</h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Kylian Mbappe</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">19 Goals ● 12 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/download (2).jpg" class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Ricardo Kaká</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">69 Goals ● 41 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/download (3).jpg" class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Sergio Aguero</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">79 Goals ● 71 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/download.jpg" class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Neymar Jr.</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">99 Goals ● 90 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/gettyimages-1278439707-612x612.jpg" class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Robert Lewandowski</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">109 Goals ● 111 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/Lionel_Messi_20180626.jpg" class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Lionel Messi</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">139 Goals ● 111 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/porto-portuglal-june-portugal-s-cristiano-ronaldo-team-mates-celebrate-winning-uefa-nations-league-final-wit-trophy-151963447.jpg"
-                        class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Christiano Ronaldo</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">138 Goals ● 111 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
-            </div>
-            <div class="player">
-                <div class="player-img">
-                    <img src="images/players/torino-italy-may-zlatan-ibrahimovic-ac-milan-serie-match-juventus-fc-ac-milan-zlatan-ibrahimovic-220488073.jpg"
-                        class="img-fluid">
-                </div>
-                <div class="player-name">
-                    <h4 class="text-center mt-3">Zaltan Ibrahimovic</h4>
-                </div>
-                <div class="player-info">
-                    <h6 class="text-center mt-1">150 Goals ● 100 Assists</h6>
-                </div>
-                <button class="w-75 d-block mx-auto">SELECT</button>
             </div>
         </div>
     </section>
