cards and calculation done

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <body>
     <header>
         <h1 class="text-center text-white">Fantasy Football Manager</h1>
-        <p class="text-white text-center fw-semibold mt-5">Welcome to Fantasy Football Manager, where you can create
+        <p class="text-white text-center fw-semibold mt-5 fs-5">Welcome to Fantasy Football Manager, where you can create
             your football team with players all around the globe. <br>You get to manage their expenses, coaches and
             schedules. <br>Enjoy the journey.</p>
         <div class=" row d-flex justify-content-center align-content-center">
-            <a href="#" class="btn btn-danger col-3 my-4 fw-normal">Get Started</a>
+            <a href="#" class="btn btn-danger col-2 my-4 fw-normal py-3 fw-semibold fs-5">Get Started</a>
         </div>
     </header>
     <!-- header done  -->
     <!-- player section  -->
-    <section class="container">
+    <section class="container mt-5">
         <div class="row">
             <div class="col-8">
                 <div class="players">
@@ -37,7 +37,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Angel Di Maria</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">39 Goals ● 11 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">39 Goals ● 11 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -50,7 +50,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Kylian Mbappe</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">19 Goals ● 12 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">19 Goals ● 12 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -63,7 +63,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Ricardo Kaká</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">69 Goals ● 41 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">69 Goals ● 41 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -76,7 +76,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Sergio Aguero</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">79 Goals ● 71 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">79 Goals ● 71 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -89,7 +89,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Neymar Jr.</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">99 Goals ● 90 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">99 Goals ● 90 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -102,7 +102,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Robert Lewandowski</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">109 Goals ● 111 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">109 Goals ● 111 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -115,7 +115,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Lionel Messi</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">139 Goals ● 111 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">139 Goals ● 111 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -129,7 +129,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Christiano Ronaldo</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">138 Goals ● 111 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">138 Goals ● 111 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -143,7 +143,7 @@
                             <h4 class="text-center mt-3 fw-semibold">Zaltan Ibrahimovic</h4>
                         </div>
                         <div class="player-info">
-                            <h6 class="text-center mt-1">150 Goals ● 100 Assists</h6>
+                            <h6 class="text-center mt-1 text-secondary">150 Goals ● 100 Assists</h6>
                         </div>
                         <button
                             class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
@@ -152,9 +152,9 @@
             </div>
             <div class="col-4">
                 <div class="calculation">
-                    <div class="selected">
-                        <h3>Selected</h3>
-                        <div>
+                    <div class="selected mb-3">
+                        <h3 class="text-center mt-4 fw-semibold text-decoration-underline">Selected</h3>
+                        <div class="mt-5">
                             <ol>
                                 <li>1</li>
                                 <li>2</li>
@@ -164,21 +164,28 @@
                             </ol>
                         </div>
                     </div>
-                    <div class="budget">
-                        <h5 class="d-inline">Per Player</h5> <input type="text">
-                        <button class="d-block d-block bg-primary text-white  fw-semibold py-2 fs-5">Submit</button>
-                        <h5 class="d-inline">Player Expense</h5>
-                        <h5 class="d-inline"><span>0000</span> $</h5>
-                        <div class="d-flex">
-                            <h5 class=>Manager</h5> <input type="text">
+                    <div class="budget mt-3">
+                        <h3 class="text-center mt-4 fw-semibold text-decoration-underline">Budget</h3>
+                        <div class="d-flex justify-content-evenly mt-4">
+                            <h4>Per Player</h4> <input type="text">
                         </div>
-                        <div class="d-flex">
-                            <h5 class=>Coach</h5><input type="text">
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate</button>
+                        <div class="d-flex justify-content-evenly mt-5">
+                            <h4>Player Expense</h4>
+                            <h4><span>0000</span> $</h4>
                         </div>
-                        <button class="d-block d-block bg-primary text-white  fw-semibold py-2 fs-5">Submit</button>
-                        <div class="d-flex">
-                            <h5>Total</h5>
-                            <h5><span>0000</span>$</h5>
+                        <div class="d-flex justify-content-evenly mt-3">
+                            <h4>Manager</h4><input type="text">
+                        </div>
+                        <div class="d-flex justify-content-evenly mt-3">
+                            <h4>Coach</h4>&nbsp;<input type="text">
+                        </div>
+                        <button
+                            class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate Total</button>
+                        <div class="d-flex mt-5 mb-4 justify-content-evenly">
+                            <h4>Total</h4>
+                            <h4><span class="text-danger">0000</span> $</h4>
                         </div>
                     </div>
                 </div>
