html and css done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <header>
         <h1 class="text-center text-white">Fantasy Football Manager</h1>
-        <p class="text-white text-center fw-semibold mt-5 fs-5">Welcome to Fantasy Football Manager, where you can create
+        <p class="text-white text-center fw-semibold mt-5 fs-5">Welcome to Fantasy Football Manager, where you can
+            create
             your football team with players all around the globe. <br>You get to manage their expenses, coaches and
             schedules. <br>Enjoy the journey.</p>
         <div class=" row d-flex justify-content-center align-content-center">
@@ -169,8 +170,7 @@
                         <div class="d-flex justify-content-evenly mt-4">
                             <h4>Per Player</h4> <input type="text">
                         </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate</button>
+                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate</button>
                         <div class="d-flex justify-content-evenly mt-5">
                             <h4>Player Expense</h4>
                             <h4><span>0000</span> $</h4>
@@ -181,8 +181,8 @@
                         <div class="d-flex justify-content-evenly mt-3">
                             <h4>Coach</h4>&nbsp;<input type="text">
                         </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate Total</button>
+                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate
+                            Total</button>
                         <div class="d-flex mt-5 mb-4 justify-content-evenly">
                             <h4>Total</h4>
                             <h4><span class="text-danger">0000</span> $</h4>
@@ -192,6 +192,10 @@
             </div>
         </div>
     </section>
+    <footer class="mt-5">
+        <hr>
+        <p class="text-center fs-6 mt-5 mb-5">Copyright Ⓒ 2022 All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
