js file connected + got the player names

--- a/index.html
+++ b/index.html
@@ -34,120 +34,120 @@
                         <div class="player-img">
                             <img src="images/players/di-maria-1.jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
+                        <div>
                             <h4 class="text-center mt-3 fw-semibold">Angel Di Maria</h4>
-                        </div>
-                        <div class="player-info">
                             <h6 class="text-center mt-1 text-secondary">39 Goals ● 11 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/download (1).jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
+                        <div>
                             <h4 class="text-center mt-3 fw-semibold">Kylian Mbappe</h4>
+                            <h6 class="text-center mt-1 text-secondary">69 Goals ● 41 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">19 Goals ● 12 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/download (2).jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
-                            <h4 class="text-center mt-3 fw-semibold">Ricardo Kaká</h4>
+                        <div>
+                            <h4 class="text-center mt-3 fw-semibold">Ricardo Kaka</h4>
+                            <h6 class="text-center mt-1 text-secondary">88 Goals ● 15 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">69 Goals ● 41 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/download (3).jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
+                        <div>
                             <h4 class="text-center mt-3 fw-semibold">Sergio Aguero</h4>
+                            <h6 class="text-center mt-1 text-secondary">30 Goals ● 15 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">79 Goals ● 71 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/download.jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
+                        <div>
                             <h4 class="text-center mt-3 fw-semibold">Neymar Jr.</h4>
+                            <h6 class="text-center mt-1 text-secondary">90 Goals ● 100 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">99 Goals ● 90 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/gettyimages-1278439707-612x612.jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
-                            <h4 class="text-center mt-3 fw-semibold">Robert Lewandowski</h4>
+                        <div>
+                            <h4 class="text-center mt-3 fw-semibold">Lewandowski</h4>
+                            <h6 class="text-center mt-1 text-secondary">115 Goals ● 110 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">109 Goals ● 111 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/Lionel_Messi_20180626.jpg" class="img-fluid">
                         </div>
-                        <div class="player-name">
+                        <div>
                             <h4 class="text-center mt-3 fw-semibold">Lionel Messi</h4>
+                            <h6 class="text-center mt-1 text-secondary">200 Goals ● 111 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">139 Goals ● 111 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/porto-portuglal-june-portugal-s-cristiano-ronaldo-team-mates-celebrate-winning-uefa-nations-league-final-wit-trophy-151963447.jpg"
                                 class="img-fluid">
                         </div>
-                        <div class="player-name">
-                            <h4 class="text-center mt-3 fw-semibold">Christiano Ronaldo</h4>
+                        <div>
+                            <h4 class="text-center mt-3 fw-semibold">Christian Ronaldo</h4>
+                            <h6 class="text-center mt-1 text-secondary">199 Goals ● 199 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">138 Goals ● 111 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                     <div class="player">
                         <div class="player-img">
                             <img src="images/players/torino-italy-may-zlatan-ibrahimovic-ac-milan-serie-match-juventus-fc-ac-milan-zlatan-ibrahimovic-220488073.jpg"
                                 class="img-fluid">
                         </div>
-                        <div class="player-name">
+                        <div>
                             <h4 class="text-center mt-3 fw-semibold">Zaltan Ibrahimovic</h4>
+                            <h6 class="text-center mt-1 text-secondary">211 Goals ● 100 Assists</h6>
+                            <div>
+                                <button
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                            </div>
                         </div>
-                        <div class="player-info">
-                            <h6 class="text-center mt-1 text-secondary">150 Goals ● 100 Assists</h6>
-                        </div>
-                        <button
-                            class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -196,6 +196,7 @@
         <hr>
         <p class="text-center fs-6 mt-5 mb-5">Copyright Ⓒ 2022 All Rights Reserved</p>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
