--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <h6 class="text-center mt-1 text-secondary">211 Goals ● 100 Assists</h6>
                             <div>
                                 <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 clicked" onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -156,12 +156,8 @@
                     <div class="selected mb-3">
                         <h3 class="text-center mt-4 fw-semibold text-decoration-underline">Selected</h3>
                         <div class="mt-5">
-                            <ol>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                                <li>4</li>
-                                <li>5</li>
+                            <ol id="place-list">
+                                
                             </ol>
                         </div>
                     </div>
