done calculating player total

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                             <h6 class="text-center mt-1 text-secondary">39 Goals ● 11 Assists</h6>
                             <div>
                                 <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 btn-disable" onclick="addToList(this)">SELECT</button>
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 btn-disable"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -51,8 +52,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Kylian Mbappe</h4>
                             <h6 class="text-center mt-1 text-secondary">69 Goals ● 41 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -64,8 +65,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Ricardo Kaka</h4>
                             <h6 class="text-center mt-1 text-secondary">88 Goals ● 15 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -77,8 +78,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Sergio Aguero</h4>
                             <h6 class="text-center mt-1 text-secondary">30 Goals ● 15 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -90,8 +91,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Neymar Jr.</h4>
                             <h6 class="text-center mt-1 text-secondary">90 Goals ● 100 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -103,8 +104,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Lewandowski</h4>
                             <h6 class="text-center mt-1 text-secondary">115 Goals ● 110 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -116,8 +117,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Lionel Messi</h4>
                             <h6 class="text-center mt-1 text-secondary">200 Goals ● 111 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -130,8 +131,8 @@
                             <h4 class="text-center mt-3 fw-semibold">Christian Ronaldo</h4>
                             <h6 class="text-center mt-1 text-secondary">199 Goals ● 199 Assists</h6>
                             <div>
-                                <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5" onclick="addToList(this)">SELECT</button>
+                                <button class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -145,7 +146,8 @@
                             <h6 class="text-center mt-1 text-secondary">211 Goals ● 100 Assists</h6>
                             <div>
                                 <button
-                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 clicked" onclick="addToList(this)">SELECT</button>
+                                    class="w-75 d-block mx-auto bg-primary text-white  fw-semibold py-2 fs-5 clicked"
+                                    onclick="addToList(this)">SELECT</button>
                             </div>
                         </div>
                     </div>
@@ -157,7 +159,7 @@
                         <h3 class="text-center mt-4 fw-semibold text-decoration-underline">Selected</h3>
                         <div class="mt-5">
                             <ol id="place-list">
-                                
+
                             </ol>
                         </div>
                     </div>
@@ -166,10 +168,11 @@
                         <div class="d-flex justify-content-evenly mt-4">
                             <h4>Per Player</h4> <input type="text" id="per-player-value">
                         </div>
-                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4" id="calculate-btn">Calculate</button>
+                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4"
+                            id="calculate-btn">Calculate</button>
                         <div class="d-flex justify-content-evenly mt-5">
                             <h4>Player Expense</h4>
-                            <h4><span>0000</span> $</h4>
+                            <h4><span id="player-expense">0</span> $</h4>
                         </div>
                         <div class="d-flex justify-content-evenly mt-3">
                             <h4>Manager</h4><input type="text">
