--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
                             <h4><span id="player-expense">0</span> $</h4>
                         </div>
                         <div class="d-flex justify-content-evenly mt-3">
-                            <h4>Manager</h4><input type="text">
+                            <h4>Manager</h4><input type="text" id="manager-field">
                         </div>
                         <div class="d-flex justify-content-evenly mt-3">
-                            <h4>Coach</h4>&nbsp;<input type="text">
+                            <h4>Coach</h4>&nbsp;<input type="text" id="coach-field">
                         </div>
-                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4">Calculate
+                        <button class="w-75 d-block mx-auto bg-primary text-white py-2 fs-5 mt-4" id="calculate-total">Calculate
                             Total</button>
                         <div class="d-flex mt-5 mb-4 justify-content-evenly">
                             <h4>Total</h4>
-                            <h4><span class="text-danger">0000</span> $</h4>
+                            <h4><span class="text-danger" id="total-value">0</span> $</h4>
                         </div>
                     </div>
                 </div>
@@ -195,6 +195,7 @@
         <hr>
         <p class="text-center fs-6 mt-5 mb-5">Copyright Ⓒ 2022 All Rights Reserved</p>
     </footer>
+    <script src="common.js"></script>
     <script src="index.js"></script>
 </body>
 
